--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -45,11 +45,11 @@
 
 .form__button-submit {
     padding: 10px;
-    width: 30%;
+    width: 100%;
     height: 50px;
     border: none;
     border-radius: 3px;
-    background: #000;
+    background: #ff0000;
     color: #fff;
     cursor: pointer;
 }
@@ -57,4 +57,9 @@
 .register__link {
     margin-top: 20px;
     text-align: center;
+}
+
+/* プロフィール画像：ファイル選択の標準表示を消す */
+.profile-file-area input[type="file"] {
+    display: none;
 }
